# katas_accounting

./: .gitmodules  CMakeLists.txt  README.md  README_cmds.txt  accounting.cpp  accounting.hpp  run.sh
include/: accounting.hpp
src/: CMakeLists.txt  accounting.cpp  notifyhook.cpp
tests/: CMakeLists.txt  contracts.hpp.in  main.cpp  test_account.cpp  test_symbol.hpp
